simplify mapping verification display

--- a/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
+++ b/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
@@ -55,49 +55,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('name_mappings.json') as f:\n",
-    "    name_mappings_config = json.load(f)\n",
-    "    names_map = name_mappings_config[\"names_map\"]\n",
-    "    ignore_list = name_mappings_config[\"ignore_list\"]\n",
-    "    \n",
-    "    for key in ignore_list:\n",
-    "        names_map[key] = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Put all of the SASH DICOM data within a directory called 'dicom' in here:\n",
     "data_path_root = pathlib.Path.home().joinpath('.data/dicom-ct-and-structures')"
    ]
@@ -117,8 +74,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "structure_names_by_ct_uid, structure_names_by_structure_set_uid = indexing.get_cached_structure_names_by_uids(\n",
-    "    data_path_root, structure_set_paths, names_map)"
+    "names_map = filtering.load_names_mapping('name_mappings.json')\n",
+    "\n",
+    "# Used to verify that all structures have either been ignored or mapped to a name\n",
+    "filtering.verify_all_names_have_mapping(structure_set_paths, names_map)"
    ]
   },
   {
@@ -127,8 +86,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Used to verify that all structures have either been ignored or mapped to a name\n",
-    "filtering.verify_all_names_have_mapping(structure_set_paths, names_map)"
+    "structure_names_by_ct_uid, structure_names_by_structure_set_uid = indexing.get_cached_structure_names_by_uids(\n",
+    "    data_path_root, structure_set_paths, names_map)"
    ]
   },
   {
