--- a/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
+++ b/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
@@ -46,7 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pymedphys.labs.autosegmentation import indexing, softdice, filtering, pipeline, tfrecord"
+    "from pymedphys.labs.autosegmentation import (\n",
+    "    indexing, softdice, filtering, pipeline, tfrecord)"
    ]
   },
   {
@@ -65,7 +66,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ct_image_paths, structure_set_paths, ct_uid_to_structure_uid, structure_uid_to_ct_uids = indexing.get_uid_cache(data_path_root)"
+    "(\n",
+    "    ct_image_paths, \n",
+    "    structure_set_paths, \n",
+    "    ct_uid_to_structure_uid, \n",
+    "    structure_uid_to_ct_uids,\n",
+    ") = indexing.get_uid_cache(data_path_root)"
    ]
   },
   {
@@ -86,8 +92,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "structure_names_by_ct_uid, structure_names_by_structure_set_uid = indexing.get_cached_structure_names_by_uids(\n",
-    "    data_path_root, structure_set_paths, names_map)"
+    "(\n",
+    "    structure_names_by_ct_uid, \n",
+    "    structure_names_by_structure_set_uid,\n",
+    ") = indexing.get_cached_structure_names_by_uids(\n",
+    "    data_path_root, \n",
+    "    structure_set_paths, \n",
+    "    names_map,\n",
+    ")"
    ]
   },
   {
@@ -96,7 +108,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_list_of_structures = list(set([item for key, item in names_map.items()]).difference({None}))\n",
+    "full_list_of_structures = list(set(\n",
+    "    [item for key, item in names_map.items()]\n",
+    ").difference({None}))\n",
+    "\n",
     "full_list_of_structures = sorted(full_list_of_structures)\n",
     "full_list_of_structures"
    ]
