add random back in
Former-commit-id: d368c42e0a5de92a865e824d8a3741ef3a65f11d

--- a/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
+++ b/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
@@ -6,6 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pathlib\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Makes it so any changes in pymedphys is automatically\n",
     "# propagated into the notebook without needing a kernel reset.\n",
     "from IPython.lib.deepreload import reload\n",
@@ -184,6 +194,13 @@
     "for ct_uid, x_grid, y_grid, input_array, output_array in loaded_dataset.take(15):\n",
     "    print(ct_uid)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
