--- a/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
+++ b/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
@@ -66,7 +66,7 @@
     "names_map = filtering.load_names_mapping('name_mappings.json')\n",
     "\n",
     "# Used to verify that all structures have either been ignored or mapped to a name\n",
-    "filtering.verify_all_names_have_mapping(structure_set_paths, names_map)"
+    "filtering.verify_all_names_have_mapping(data_path_root, structure_set_paths, names_map)"
    ]
   },
   {
