expand note in notebook

--- a/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
+++ b/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
@@ -214,7 +214,8 @@
     "Nevertheless, there may be a significant time difference should the numpy generator need to\n",
     "copy the data onto the GPU. Potentially the tfrecord dataset may just load the data directly\n",
     "onto the GPU saving a copy step. Will need to determine experimentally which dataset provides\n",
-    "the best development flexibility / training time trade off."
+    "the best development flexibility / training time trade off. However, I suspect the small\n",
+    "time reduction that tfrecord provides won't offset the loss in flexibility from using it."
    ]
   },
   {
