--- a/protyping/auto-segmentation/sb/16-sanity-tests-contours-make-sense.ipynb
+++ b/protyping/auto-segmentation/sb/16-sanity-tests-contours-make-sense.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pymedphys.labs.autosegmentation import pipeline, filtering, indexing"
+    "from pymedphys.labs.autosegmentation import pipeline, filtering, indexing, mask"
    ]
   },
   {
@@ -124,145 +124,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_path_from_tensor_uid(uid):\n",
-    "    return ct_image_paths[uid.numpy().decode()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ct_uid, x_grid, y_grid, input_array, output_array = list(datasets['training'].take(1))[-1]\n",
-    "\n",
-    "ct_uid = ct_uid.numpy().decode()\n",
-    "x_grid = x_grid.numpy()\n",
-    "y_grid = y_grid.numpy()\n",
-    "input_array = input_array.numpy()[:,:,0]\n",
-    "output_array = output_array.numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "structure_set_uid = ct_uid_to_structure_uid[ct_uid]\n",
-    "structure_set_uid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "structure_set_path = structure_set_paths[structure_set_uid]\n",
-    "structure_set = pydicom.read_file(\n",
-    "    structure_set_path,\n",
-    "    force=True,\n",
-    "    specific_tags=[\"ROIContourSequence\", \"StructureSetROISequence\"],\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "number_to_name_map = {\n",
-    "    roi_sequence_item.ROINumber: names_map[roi_sequence_item.ROIName]\n",
-    "    for roi_sequence_item in structure_set.StructureSetROISequence\n",
-    "    if names_map[roi_sequence_item.ROIName] is not None\n",
-    "}\n",
-    "\n",
-    "number_to_name_map"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "structure_set.StructureSetROISequence[10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "structure_names_by_structure_set_uid[structure_set_uid]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for roi_contour_sequence_item in structure_set.ROIContourSequence:\n",
-    "    try:\n",
-    "        structure_name = number_to_name_map[\n",
-    "            roi_contour_sequence_item.ReferencedROINumber\n",
-    "        ]\n",
-    "    except KeyError:\n",
-    "        continue\n",
-    "        \n",
-    "    for contour_sequence_item in roi_contour_sequence_item.ContourSequence:\n",
-    "        contour_imaging_sequence = contour_sequence_item.ContourImageSequence\n",
-    "        referenced_ct_uid = contour_imaging_sequence[0].ReferencedSOPInstanceUID\n",
-    "        \n",
-    "        if referenced_ct_uid == ct_uid:\n",
-    "            print(structure_name)\n",
-    "#             print(contour_sequence_item.ContourData)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "structure_names_by_ct_uid[ct_uid]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.contourf(x_grid, y_grid, input_array)\n",
-    "plt.axis('equal')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i, structure in enumerate(structures_to_learn):\n",
+    "def diagnostic_plotting(x_grid, y_grid, input_array, output_array):\n",
     "    plt.figure()\n",
-    "    plt.contourf(x_grid, y_grid, output_array[:,:,i])\n",
-    "    plt.title(structure)\n",
-    "    plt.axis('equal')\n",
-    "    plt.show()\n",
     "    \n",
-    "    print(np.max(output_array[:,:,i]))"
+    "    x_grid = x_grid.numpy()\n",
+    "    y_grid = y_grid.numpy()\n",
+    "    input_array = input_array.numpy()[:,:,0]\n",
+    "    output_array = output_array.numpy()\n",
+    "    \n",
+    "    for i, structure in enumerate(structures_to_learn[0:-1]):\n",
+    "        if structure.endswith('left'):\n",
+    "            colour = 'r'\n",
+    "        elif structure.endswith('right'):\n",
+    "            colour = 'b'\n",
+    "        else:\n",
+    "            raise ValueError(\"Expected either left or right\")\n",
+    "            \n",
+    "        if structure.startswith('lens'):\n",
+    "            colour += '--'\n",
+    "        elif structure.startswith('eye'):\n",
+    "            colour += '-'\n",
+    "        else:\n",
+    "            raise ValueError(\"Expected either eye or lens\")\n",
+    "\n",
+    "        contours = mask.get_contours_from_mask(x_grid, y_grid, output_array[:,:,i])\n",
+    "        for contour in contours:\n",
+    "            plt.plot(*contour.T, colour)\n",
+    "            \n",
+    "    \n",
+    "\n",
+    "    plt.axis('equal')\n",
+    "    ax = plt.gca()\n",
+    "    xlim = ax.get_xlim()\n",
+    "    ylim = ax.get_ylim()\n",
+    "    \n",
+    "    contours = mask.get_contours_from_mask(x_grid, y_grid, output_array[:,:,-1])\n",
+    "    for contour in contours:\n",
+    "        plt.plot(*contour.T, 'k--')\n",
+    "    \n",
+    "    windowed = np.copy(input_array)\n",
+    "\n",
+    "    vmin = 900\n",
+    "    vmax = 1200\n",
+    "    windowed[windowed<vmin] = vmin\n",
+    "    windowed[windowed>vmax] = vmax\n",
+    "\n",
+    "    plt.contourf(x_grid, y_grid, windowed, 50)\n",
+    "    plt.colorbar()\n",
+    "    ax.set_xlim(xlim)\n",
+    "    ax.set_ylim(ylim)"
    ]
   },
   {
@@ -270,21 +180,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def display_paths(ct_uid):\n",
+    "    ct_uid = ct_uid.numpy().decode()\n",
+    "    print(ct_image_paths[ct_uid])\n",
+    "    \n",
+    "    structure_set_uid = ct_uid_to_structure_uid[ct_uid]\n",
+    "    print(structure_set_paths[structure_set_uid])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "for ct_uid, x_grid, y_grid, input_array, output_array in datasets['training'].take(10):\n",
+    "    display_paths(ct_uid)\n",
+    "    diagnostic_plotting(x_grid, y_grid, input_array, output_array)\n",
+    "    plt.show()"
+   ]
   }
  ],
  "metadata": {
