remove 22026 from dataset
Former-commit-id: 6c90e4dea9041caaaf5d6b41c3ce04e481b91354

--- a/protyping/auto-segmentation/sb/16-sanity-tests-contours-make-sense.ipynb
+++ b/protyping/auto-segmentation/sb/16-sanity-tests-contours-make-sense.ipynb
@@ -125,7 +125,7 @@
    "outputs": [],
    "source": [
     "def diagnostic_plotting(x_grid, y_grid, input_array, output_array):\n",
-    "    plt.figure()\n",
+    "    plt.figure(figsize=(15,10))\n",
     "    \n",
     "    x_grid = x_grid.numpy()\n",
     "    y_grid = y_grid.numpy()\n",
