--- a/protyping/auto-segmentation/sb/16-sanity-tests-contours-make-sense.ipynb
+++ b/protyping/auto-segmentation/sb/16-sanity-tests-contours-make-sense.ipynb
@@ -11,6 +11,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "from IPython import display\n",
+    "\n",
     "import pydicom"
    ]
   },
@@ -72,10 +74,13 @@
     "structures_to_learn = [\n",
     "    'lens_left', 'lens_right', 'eye_left', 'eye_right', 'patient']\n",
     "\n",
-    "# Use the following to filter the slices used for training, validation, and testing\n",
+    "# Use the following to filter the slices used for training, validation,\n",
+    "# and testing\n",
     "filters = {\n",
     "    \"study_set_must_have_all_of\": structures_to_learn,\n",
-    "    \"slice_at_least_one_of\": ['lens_left', 'lens_right', 'eye_left', 'eye_right'],\n",
+    "    \"slice_at_least_one_of\": [\n",
+    "        'lens_left', 'lens_right', 'eye_left', 'eye_right'\n",
+    "    ],\n",
     "    \"slice_must_have\": ['patient'],\n",
     "    \"slice_cannot_have\": []\n",
     "}"
@@ -87,7 +92,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasets = pipeline.create_datasets(data_path_root, names_map, structures_to_learn, filters)"
+    "datasets = pipeline.create_datasets(\n",
+    "    data_path_root, names_map, structures_to_learn, filters)"
    ]
   },
   {
@@ -147,18 +153,19 @@
     "        else:\n",
     "            raise ValueError(\"Expected either eye or lens\")\n",
     "\n",
-    "        contours = mask.get_contours_from_mask(x_grid, y_grid, output_array[:,:,i])\n",
+    "        contours = mask.get_contours_from_mask(\n",
+    "            x_grid, y_grid, output_array[:,:,i])\n",
     "        for contour in contours:\n",
     "            plt.plot(*contour.T, colour)\n",
     "            \n",
     "    \n",
-    "\n",
     "    plt.axis('equal')\n",
     "    ax = plt.gca()\n",
     "    xlim = ax.get_xlim()\n",
     "    ylim = ax.get_ylim()\n",
     "    \n",
-    "    contours = mask.get_contours_from_mask(x_grid, y_grid, output_array[:,:,-1])\n",
+    "    contours = mask.get_contours_from_mask(\n",
+    "        x_grid, y_grid, output_array[:,:,-1])\n",
     "    for contour in contours:\n",
     "        plt.plot(*contour.T, 'k--')\n",
     "    \n",
@@ -182,11 +189,17 @@
    "outputs": [],
    "source": [
     "def display_paths(ct_uid):\n",
-    "    ct_uid = ct_uid.numpy().decode()\n",
     "    print(ct_image_paths[ct_uid])\n",
     "    \n",
     "    structure_set_uid = ct_uid_to_structure_uid[ct_uid]\n",
     "    print(structure_set_paths[structure_set_uid])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Display Results"
    ]
   },
   {
@@ -195,10 +208,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for ct_uid, x_grid, y_grid, input_array, output_array in datasets['training'].take(10):\n",
-    "    display_paths(ct_uid)\n",
+    "for (\n",
+    "    ct_uid, x_grid, y_grid, input_array, output_array\n",
+    ") in datasets['training'].take(10):\n",
+    "    \n",
+    "    ct_uid = ct_uid.numpy().decode()\n",
+    "    \n",
+    "    display.display(display.Markdown(f\"## {ct_uid}\"))\n",
     "    diagnostic_plotting(x_grid, y_grid, input_array, output_array)\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    display_paths(ct_uid)"
    ]
   }
  ],
