--- a/site-specific/cancer-care-associates/production/Winston Lutz/Arc Method/Arc Analysis.ipynb
+++ b/site-specific/cancer-care-associates/production/Winston Lutz/Arc Method/Arc Analysis.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "working_dir = pathlib.Path(r\"\\\\pdc\\OneDrive$\\RCCC Specific Files\\Linac Beam Data Record\\Synergy 2694\\QA\\20200303_post_steering_power_supply\\Wlutz\")\n",
+    "working_dir = pathlib.Path(r\"\\\\pdc\\OneDrive$\\RCCC Specific Files\\Linac Beam Data Record\\Synergy 2619\\QA\\20200617_wlutz\")\n",
     "output_dir = working_dir.joinpath('results')\n",
     "output_dir.mkdir(exist_ok=True)"
    ]
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frame_paths_list = list(working_dir.joinpath(\"frames\").glob(\"**/*.ppm\"))\n",
+    "frame_paths_list = list(working_dir.joinpath(\"frames\").glob(\"**/*.tif\"))\n",
     "# frame_paths_list"
    ]
   },
@@ -1211,7 +1211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
