--- a/site-specific/cancer-care-associates/production/Winston Lutz/Arc Method/Decoding and Sorting iViewDB.ipynb
+++ b/site-specific/cancer-care-associates/production/Winston Lutz/Arc Method/Decoding and Sorting iViewDB.ipynb
@@ -195,7 +195,7 @@
     "    save_dir = indexed_dir.joinpath(machine, patient_dir, treatment_name, port_name, image_date_time)\n",
     "    save_dir.mkdir(parents=True, exist_ok=True)\n",
     "    \n",
-    "    new_path = save_dir.joinpath(f'frame_{current_frame_str}.ppm')\n",
+    "    new_path = save_dir.joinpath(f'frame_{current_frame_str}.tif')\n",
     "    \n",
     "    pymedphys._losslessjpeg.convert_lossless_jpeg(encoded_image_path, new_path)\n",
     "    \n",
