--- a/protyping/auto-segmentation/sb/00-stage-0-prototyping/04-mask-with-edge-falloff.ipynb
+++ b/protyping/auto-segmentation/sb/00-stage-0-prototyping/04-mask-with-edge-falloff.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Put all of the SASH DICOM data here, file structure doesn't matter:\n",
+    "# Put all of the DICOM data here, file structure doesn't matter:\n",
     "data_path_root = pathlib.Path.home().joinpath('.data/dicom-ct-and-structures')\n",
     "\n",
     "dcm_paths = list(data_path_root.rglob('**/*.dcm'))"
