--- a/protyping/auto-segmentation/sb/00-stage-0-prototyping/06-caching.ipynb
+++ b/protyping/auto-segmentation/sb/00-stage-0-prototyping/06-caching.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Put all of the SASH DICOM data here, file structure doesn't matter:\n",
+    "# Put all of the DICOM data here, file structure doesn't matter:\n",
     "data_path_root = pathlib.Path.home().joinpath('.data/dicom-ct-and-structures')\n",
     "npz_directory = data_path_root.joinpath('npz_cache')\n",
     "npz_directory.mkdir(parents=True, exist_ok=True)"
