--- a/protyping/auto-segmentation/sb/00-stage-0-prototyping/09-lenses-eyes-and-patient-only.ipynb
+++ b/protyping/auto-segmentation/sb/00-stage-0-prototyping/09-lenses-eyes-and-patient-only.ipynb
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Put all of the SASH DICOM data within a directory called 'dicom' in here:\n",
+    "# Put all of the DICOM data within a directory called 'dicom' in here:\n",
     "data_path_root = pathlib.Path.home().joinpath('.data/dicom-ct-and-structures')\n",
     "dcm_paths = list(data_path_root.rglob('dicom/**/*.dcm'))\n",
     "\n",
