--- a/protyping/auto-segmentation/sb/16-sanity-tests-contours-make-sense.ipynb
+++ b/protyping/auto-segmentation/sb/16-sanity-tests-contours-make-sense.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Put all of the SASH DICOM data within a directory called 'dicom' \n",
+    "# Put all of the DICOM data within a directory called 'dicom' \n",
     "# organised by 'training', 'validation', and 'testing' in here:\n",
     "data_path_root = pathlib.Path.home().joinpath('.data/dicom-ct-and-structures')\n",
     "\n",
