--- a/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
+++ b/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Put all of the SASH DICOM data within a directory called 'dicom' in here:\n",
+    "# Put all of the DICOM data within a directory called 'dicom' in here:\n",
     "data_path_root = pathlib.Path.home().joinpath('.data/dicom-ct-and-structures')"
    ]
   },
