see if direct streaming from zenodo is useful

--- a/protyping/auto-segmentation/sb/20-uid-to-training-type.ipynb
+++ b/protyping/auto-segmentation/sb/20-uid-to-training-type.ipynb
@@ -85,9 +85,9 @@
     "        parent_and_file = path.parts[-2::]\n",
     "\n",
     "        if int(dataset_id) < 4:\n",
-    "            new_path = testing_directory.joinpath(*parent_and_file)\n",
-    "        elif int(dataset_id) < 8:\n",
     "            new_path = validation_directory.joinpath(*parent_and_file)\n",
+    "        elif int(dataset_id) < 12:\n",
+    "            new_path = testing_directory.joinpath(*parent_and_file)\n",
     "        else:\n",
     "            new_path = training_directory.joinpath(*parent_and_file)\n",
     "\n",
@@ -140,6 +140,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "(\n",
+    "    ct_image_paths,\n",
+    "    structure_set_paths,\n",
+    "    ct_uid_to_structure_uid,\n",
+    "    structure_uid_to_ct_uids,\n",
+    ") = indexing.get_uid_cache(data_path_root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    structure_names_by_ct_uid,\n",
+    "    structure_names_by_structure_set_uid,\n",
+    ") = indexing.get_cached_structure_names_by_uids(\n",
+    "    data_path_root, structure_set_paths, names_map\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "datasets = pipeline.create_datasets(\n",
     "    data_path_root, names_map, structures_to_learn, filters)"
    ]
@@ -150,9 +178,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create all npz files and build ct_uid to training type map\n",
+    "\n",
+    "ct_uid_to_training_type = {}\n",
+    "ct_uids_by_training_type = {}\n",
+    "\n",
     "for dataset_type, dataset in datasets.items():\n",
-    "    tfrecord_path = str(data_path_root.joinpath(f'{dataset_type}.tfrecord'))\n",
-    "    tfrecord.dump(dataset, tfrecord_path)"
+    "    for ct_uid, x_grid, y_grid, input_array, output_array in dataset:\n",
+    "        ct_uid = ct_uid.numpy().decode()        \n",
+    "        ct_uid_to_training_type[ct_uid] = dataset_type\n",
+    "        try:\n",
+    "            ct_uids_by_training_type[dataset_type].append(ct_uid)\n",
+    "        except KeyError:\n",
+    "            ct_uids_by_training_type[dataset_type] = []\n",
+    "\n",
+    "\n",
+    "ct_uids_by_training_type"
    ]
   },
   {
@@ -164,6 +205,18 @@
     "structures_to_learn_path = data_path_root.joinpath(\"structures_to_learn.json\")\n",
     "with open(structures_to_learn_path, \"w\") as f:\n",
     "    json.dump(structures_to_learn, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ct_uids_by_training_type_path = data_path_root.joinpath(\"ct_uids_by_training_type.json\")\n",
+    "\n",
+    "with open(ct_uids_by_training_type_path, \"w\") as f:\n",
+    "    json.dump(ct_uids_by_training_type, f)"
    ]
   },
   {
