add random shuffle to zenodo data pulling
Former-commit-id: 0e8fb6cd749b9706620c4c0dfb285f46223bc3aa

--- a/protyping/auto-segmentation/sb/22-stream-dataset-from-zenodo.ipynb
+++ b/protyping/auto-segmentation/sb/22-stream-dataset-from-zenodo.ipynb
@@ -9,6 +9,7 @@
     "import pathlib\n",
     "import json\n",
     "import shutil\n",
+    "import random\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -31,15 +32,6 @@
     "from IPython.lib.deepreload import reload\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tf.config.experimental_run_functions_eagerly(True)"
    ]
   },
   {
@@ -119,6 +111,8 @@
     "    \n",
     "    datasets = {}\n",
     "    for training_type, ct_uids in ct_uids_by_training_type.items():\n",
+    "        random.shuffle(ct_uids)\n",
+    "        \n",
     "        datasets[training_type] = single_dataset_from_zenodo_download(\n",
     "            record_name, ct_uids, structures_to_learn\n",
     "        )\n",
@@ -211,7 +205,41 @@
    "source": [
     "for (\n",
     "    ct_uid, x_grid, y_grid, input_array, output_array\n",
-    ") in datasets['training'].take(5):\n",
+    ") in datasets['training']:\n",
+    "    \n",
+    "    ct_uid = ct_uid.numpy().decode()\n",
+    "    \n",
+    "    display.display(display.Markdown(f\"## {ct_uid}\"))\n",
+    "    diagnostic_plotting(x_grid, y_grid, input_array, output_array)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for (\n",
+    "    ct_uid, x_grid, y_grid, input_array, output_array\n",
+    ") in datasets['validation']:\n",
+    "    \n",
+    "    ct_uid = ct_uid.numpy().decode()\n",
+    "    \n",
+    "    display.display(display.Markdown(f\"## {ct_uid}\"))\n",
+    "    diagnostic_plotting(x_grid, y_grid, input_array, output_array)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for (\n",
+    "    ct_uid, x_grid, y_grid, input_array, output_array\n",
+    ") in datasets['testing']:\n",
     "    \n",
     "    ct_uid = ct_uid.numpy().decode()\n",
     "    \n",
