don't hit zenodo if file already exists on disk

--- a/protyping/auto-segmentation/sb/22-stream-dataset-from-zenodo.ipynb
+++ b/protyping/auto-segmentation/sb/22-stream-dataset-from-zenodo.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "import pymedphys\n",
     "from pymedphys.labs.autosegmentation import pipeline, filtering, indexing, mask, tfrecord\n",
-    "from pymedphys._data import zenodo"
+    "from pymedphys._data import zenodo, download"
    ]
   },
   {
@@ -54,12 +54,23 @@
     "def single_dataset_from_zenodo_download(\n",
     "    record_name, ct_uids, structures_to_learn\n",
     "):\n",
+    "    npz_download_directory = download.get_data_dir().joinpath(record_name)\n",
+    "    npz_paths = {\n",
+    "        ct_uid: npz_download_directory.joinpath(f'{ct_uid}.npz')\n",
+    "        for ct_uid in ct_uids\n",
+    "    }       \n",
+    "    \n",
     "    def generator():\n",
-    "        for ct_uid in ct_uids:\n",
-    "            npz_path = pymedphys.zenodo_data_paths(\n",
-    "                record_name, \n",
-    "                filenames=[f\"{ct_uid}.npz\"]\n",
-    "            )[0]\n",
+    "        for ct_uid, npz_path in npz_paths.items():\n",
+    "            if not npz_path.exists():\n",
+    "                downloaded_path = pymedphys.zenodo_data_paths(\n",
+    "                    record_name, \n",
+    "                    filenames=[npz_path.name]\n",
+    "                )[0]\n",
+    "                \n",
+    "                if downloaded_path != npz_path:\n",
+    "                    raise ValueError(\"Expected the downloaded path to match the predicted npz_path\")\n",
+    "                    \n",
     "            data = np.load(npz_path)\n",
     "            x_grid = data[\"x_grid\"]\n",
     "            y_grid = data[\"y_grid\"]\n",
