add prefetch to the dataset when viewing
Former-commit-id: cdefa6073f26b84a92ddc3897828eea2ba38838b

--- a/protyping/auto-segmentation/sb/22-stream-dataset-from-zenodo.ipynb
+++ b/protyping/auto-segmentation/sb/22-stream-dataset-from-zenodo.ipynb
@@ -216,7 +216,7 @@
    "source": [
     "for (\n",
     "    ct_uid, x_grid, y_grid, input_array, output_array\n",
-    ") in datasets['training']:\n",
+    ") in datasets['training'].prefetch(30):\n",
     "    \n",
     "    ct_uid = ct_uid.numpy().decode()\n",
     "    \n",
@@ -233,7 +233,7 @@
    "source": [
     "for (\n",
     "    ct_uid, x_grid, y_grid, input_array, output_array\n",
-    ") in datasets['validation']:\n",
+    ") in datasets['validation'].prefetch(30):\n",
     "    \n",
     "    ct_uid = ct_uid.numpy().decode()\n",
     "    \n",
@@ -250,7 +250,7 @@
    "source": [
     "for (\n",
     "    ct_uid, x_grid, y_grid, input_array, output_array\n",
-    ") in datasets['testing']:\n",
+    ") in datasets['testing'].prefetch(30):\n",
     "    \n",
     "    ct_uid = ct_uid.numpy().decode()\n",
     "    \n",
